19 April 2010: Matthijs
- Signer client

15 April 2010: Matthijs
- Daemonize

14 April 2010: Matthijs
- Command handler

13 April 2010: Matthijs
- Parse conf.xml
- Import utilities

12 April 2010: Matthijs
- Initial signer daemon